{
  "version": 4,
  "terraform_version": "0.12.8",
  "serial": 11,
  "lineage": "54c8a5f3-2a0c-d731-be1a-8b688f5e718c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "public_http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-02036e7683abf1275",
            "domain": "vpc",
            "id": "eipalloc-05a419f82e9a58615",
            "instance": "i-0850d415310af0b38",
            "network_interface": "eni-05a87cd461b902e51",
            "private_dns": "ip-192-168-1-43.eu-west-1.compute.internal",
            "private_ip": "192.168.1.43",
            "public_dns": "ec2-34-241-118-100.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.241.118.100",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "public-http"
            },
            "vpc": true
          },
          "depends_on": [
            "aws_instance.http",
            "aws_internet_gateway.gw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-005af4c3162f495fa",
            "arn": "arn:aws:ec2:eu-west-1:153726843398:instance/i-0850d415310af0b38",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0850d415310af0b38",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "user-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-05a87cd461b902e51",
            "private_dns": "ip-192-168-1-43.eu-west-1.compute.internal",
            "private_ip": "192.168.1.43",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0cae0351ed379fdf8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06f6455844175fcf1",
            "tags": {
              "Name": "http-instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-045fd2a546c4cf6a2",
              "sg-0a41bc6d17042dc73"
            ]
          },
          "depends_on": [
            "aws_key_pair.user_key",
            "aws_security_group.administration",
            "aws_security_group.web",
            "aws_subnet.http",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0a3f4e73babd9c147",
            "owner_id": "153726843398",
            "tags": {
              "Name": "internet-gateway"
            },
            "vpc_id": "vpc-034b3b5422f534b1c"
          },
          "depends_on": [
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0d86b6e76af04f7a1",
            "owner_id": "153726843398",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a3f4e73babd9c147",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-034b3b5422f534b1c"
          },
          "depends_on": [
            "aws_internet_gateway.gw",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05d07491dd94b5e74",
            "route_table_id": "rtb-0d86b6e76af04f7a1",
            "subnet_id": "subnet-06f6455844175fcf1"
          },
          "depends_on": [
            "aws_route_table.http",
            "aws_subnet.http"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "administration",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:153726843398:security-group/sg-0a41bc6d17042dc73",
            "description": "Allow default administration service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a41bc6d17042dc73",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "administration",
            "name_prefix": null,
            "owner_id": "153726843398",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "administration"
            },
            "timeouts": null,
            "vpc_id": "vpc-034b3b5422f534b1c"
          },
          "depends_on": [
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:153726843398:security-group/sg-045fd2a546c4cf6a2",
            "description": "Allow web incgress trafic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-045fd2a546c4cf6a2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web",
            "name_prefix": null,
            "owner_id": "153726843398",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web"
            },
            "timeouts": null,
            "vpc_id": "vpc-034b3b5422f534b1c"
          },
          "depends_on": [
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:153726843398:subnet/subnet-06f6455844175fcf1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-06f6455844175fcf1",
            "map_public_ip_on_launch": false,
            "owner_id": "153726843398",
            "tags": {
              "Name": "subnet-http"
            },
            "vpc_id": "vpc-034b3b5422f534b1c"
          },
          "depends_on": [
            "aws_internet_gateway.gw",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:153726843398:vpc/vpc-034b3b5422f534b1c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-016b92ec716b79685",
            "default_route_table_id": "rtb-0778f3061fa19a135",
            "default_security_group_id": "sg-0f7d89ea6a807e3b5",
            "dhcp_options_id": "dopt-dc21bfba",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-034b3b5422f534b1c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0778f3061fa19a135",
            "owner_id": "153726843398",
            "tags": {
              "Name": "vpc-http"
            }
          }
        }
      ]
    }
  ]
}